--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,15 @@
 name             = Yars-Command-yars_exercise
 author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
-copyright_holder = Graham Ollis
+copyright_holder = NASA GSFC
 copyright_year   = 2015
 version          = 0.01
 
 [@Author::Plicease]
+:version = 1.85
 release_tests = 1
-installer     = ModuleBuild
+installer     = MakeMaker
+no_readme     = 1
 
 [RemovePrereqs]
 remove = strict
@@ -19,4 +21,22 @@ remove = base
 
 [Author::Plicease::Upload]
 cpan = 0
+
+[Author::Plicease::Thanks]
+current = Graham Ollis <plicease@cpan.org>
+original = Curt Tilmes
+
+[=inc::Scripts]
+
+[ReadmeAnyFromPod]
+source_filename = bin/yars_exercise
+filename        = README
+location        = build
+type            = text
+
+[ReadmeAnyFromPod / ReadMePodInRoot]
+source_filename = bin/yars_exercise
+filename        = README.md
+location        = root
+type            = markdown
 
