--- a/dist.ini
+++ b/dist.ini
@@ -12,12 +12,19 @@ installer     = MakeMaker
 no_readme     = 1
 
 [RemovePrereqs]
+; comes with perl
 remove = strict
 remove = warnings
 remove = base
+remove = Digest::MD5
+remove = List::Util
+remove = Time::HiRes
 
-;[Prereqs]
-;Foo::Bar = 0
+; comes with clustericious
+remove = Test::Clustericious::Config
+
+[Prereqs]
+Clustericious = 1.00
 
 [Author::Plicease::Upload]
 cpan = 0
