--- a/dist.ini
+++ b/dist.ini
@@ -6,9 +6,8 @@ copyright_year   = 2015
 version          = 0.02
 
 [@Author::Plicease]
-:version = 1.85
+:version      = 1.90
 release_tests = 1
-installer     = MakeMaker
 no_readme     = 1
 
 [RemovePrereqs]
@@ -22,6 +21,7 @@ remove = Time::HiRes
 
 ; comes with clustericious
 remove = Test::Clustericious::Config
+remove = Test::Clustericious::Log
 
 [Prereqs]
 Clustericious = 1.00
