--- a/dist.ini
+++ b/dist.ini
@@ -3,12 +3,13 @@ author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = NASA GSFC
 copyright_year   = 2015
-version          = 0.02
+version          = 0.03
 
 [@Author::Plicease]
 :version      = 1.90
 release_tests = 1
 no_readme     = 1
+github_user   = clustericious
 
 [RemovePrereqs]
 ; comes with perl
