--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,12 @@ release_tests = 1
 no_readme     = 1
 github_user   = clustericious
 
+preamble      = | if($^O eq 'MSWin32')
+preamble      = | {
+preamble      = |   print "OS Unsupported\n";
+preamble      = |   exit;
+preamble      = | }
+
 [RemovePrereqs]
 ; comes with perl
 remove = strict
