--- a/dist.ini
+++ b/dist.ini
@@ -6,10 +6,11 @@ copyright_year   = 2015
 version          = 0.03
 
 [@Author::Plicease]
-:version      = 1.90
+:version      = 1.91
 release_tests = 1
 no_readme     = 1
 github_user   = clustericious
+travis_status = 1
 
 preamble      = | if($^O eq 'MSWin32')
 preamble      = | {
