--- a/dist.ini
+++ b/dist.ini
@@ -8,9 +8,10 @@ version          = 0.03
 [@Author::Plicease]
 :version      = 1.91
 release_tests = 1
-no_readme     = 1
-github_user   = clustericious
 travis_status = 1
+no_readme     = 1
+readme_from   = lib/Yars/Command/yars_exercise.pm
+github_user   = clustericious
 
 preamble      = | if($^O eq 'MSWin32')
 preamble      = | {
@@ -43,15 +44,4 @@ original = Curt Tilmes
 
 [=inc::Scripts]
 
-[ReadmeAnyFromPod]
-source_filename = bin/yars_exercise
-filename        = README
-location        = build
-type            = text
-
-[ReadmeAnyFromPod / ReadMePodInRoot]
-source_filename = bin/yars_exercise
-filename        = README.md
-location        = root
-type            = markdown
 
