rm dep on Log::Log4perl::CommandLine

--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,7 @@ remove = Time::HiRes
 ; comes with clustericious
 remove = Test::Clustericious::Config
 remove = Test::Clustericious::Log
+remove = Clustericious::Log::CommandLine
 
 [Prereqs]
 Clustericious = 1.00
